Add signaR client.

--- a/Client/ChatClient/ChatClient/Views/MainPage.xaml
+++ b/Client/ChatClient/ChatClient/Views/MainPage.xaml
@@ -10,11 +10,17 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView HasUnevenRows="True" SeparatorVisibility="None" />
+        <ListView ItemsSource="{Binding Messages}" HasUnevenRows="True" SeparatorVisibility="None">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Text}" Detail="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
         <StackLayout Orientation="Horizontal" Grid.Row="1" Padding="10" BackgroundColor="#EFEFEF">
             <Entry HorizontalOptions="FillAndExpand" HeightRequest="25" Placeholder="Message"/>
-            <Button Text="Send"/>
+            <Button Text="Send" Command="{Binding SendCommand}"/>
         </StackLayout>
     </Grid>
 </ContentPage>
